# 1_kurs_bsu

BOOK_EXAM/: book  book.cpp
COMPLEX_2_EXAM/: Complex.cpp  Complex.hpp
COMPLEX_EXAM/: COMPLEX.cpp  COMPLEX.hpp
LABA2_1XCODE/: vector.hpp
LABA2_2XCODE/: List.hpp
LABA2_3/: Header.h  List.cpp  List.hpp  Source.cpp
LABA2_4/: source.cpp  source.hpp
LABA3_2_1/: output_vector.cpp  output_vector.hpp  vector_filling_paths.cpp  vector_filling_paths.hpp
LABA3_2_2/: exponentiation_of_matrix.cpp  exponentiation_of_matrix.hpp  two-dimensional_vector_as_one-dimensional.cpp  two-dimensional_vector_as_one-dimensional.hpp  two-dimensional_vector_as_pointer.cpp  two-dimensional_vector_as_pointer.hpp
LABA4_1_NEW/: CPU.cpp  CPU.hpp  HDD.cpp  HDD.hpp  INTERNAL_DEVICE.cpp  INTERNAL_DEVICE.hpp  MEMORY.cpp  MEMORY.hpp  PERIPHERAL.cpp  PERIPHERAL.hpp  SCREEN.cpp  SCREEN.hpp  SSD.cpp  SSD.hpp  TECHNIC.cpp  TECHNIC.hpp
LABA4_2/: DYNAMIC_ARRAY.cpp  DYNAMIC_ARRAY.hpp
Laba_1_1/: laba1-1  laba1-1.cpp
POLINOM_EXAM/: POLINOM.cpp  POLINOM.hpp
TEST/: CMakeLists.txt  List.cpp  List.hpp
TIME_EXAM/: TIME.cpp  TIME.hpp
laba 1_1/: 1_1  1_1.cpp
laba 1_1 VS/: f.txt  g.txt  greater.txt  laba1_1  laba1_1.cpp  less.txt
laba 1_2 VS/: laba1_2.cpp
laba 1_3 VS/: List_stud.rtf  laba1_3  laba1_3.cpp
laba 1_4 VS/: List_stud.rtf  Stupid_list.rtf  laba1_4  laba1_4.cpp
laba 1_5/: calculate_function.hpp  calculate_integral_simpson_method.hpp
laba 2_1/: array_filling_paths.cpp  array_filling_paths.hpp  main.cpp  output_array.cpp  output_array.hpp
laba 2_2/: exponentiation_of_matrix.hpp  (+2 more)
(+182 files in other folders)
